# options-ztrading

./: .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  readme.md
options_ztrading/: __init__.py  cli.py  config.py
options_ztrading/apis/: polygon.py
options_ztrading/services/: options.py  tickers.py
