[tool.poetry]
name = "options-ztrading"
version = "0.1.0"
description = "Terminal-based options data fetcher from Polygon.io"
authors = ["Your Name <your.email@example.com>"]
readme = "readme.md"
packages = [{include = "options_ztrading"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
tqdm = "^4.66.5"
typer = {version = "^0.12.3", extras = ["all"]}
rich = "^13.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
ruff = "^0.6.9"

[tool.poetry.scripts]
options = "options_ztrading.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
